fix: turn removeOnError into skipOnError DHIS2-14213 [2.39] (#12794)